package com.gdavidpb.tuindice.about.ui

object AboutUiTags {
	const val ContentContainer = "about_content_container"
	const val HeaderTitle = "about_header_title"
	const val ItemContainer = "about_item_container"
	const val SpanText = "about_span_text"

	const val OpenCreativeCommons = "about_open_creative_commons"
	const val OpenTerms = "about_open_terms"
	const val OpenPrivacy = "about_open_privacy"
	const val UsageDataConsentToggle = "about_usage_data_consent_toggle"
	const val OpenSupport = "about_open_support"
	const val OpenX = "about_open_x"
	const val ShareApp = "about_share_app"
	const val RateOnStore = "about_rate_on_store"
	const val OpenGithub = "about_open_github"
	const val ContactDeveloper = "about_contact_developer"
	const val ReportBug = "about_report_bug"
	const val OpenKotlin = "about_open_kotlin"
	const val OpenCompose = "about_open_compose"
	const val OpenFirebase = "about_open_firebase"
	const val OpenKoin = "about_open_koin"
	const val OpenKtor = "about_open_ktor"
	const val OpenDst = "about_open_dst"
}
