package com.gdavidpb.tuindice.ui

object MaincoreUiTags {
	const val BrowserContainer = "maincore_browser_container"
	const val BrowserLoadingIndicator = "maincore_browser_loading_indicator"
	const val BrowserE2eExternalResourceTrigger = "maincore_browser_e2e_external_resource_trigger"

	const val GooglePlayServicesMessage = "maincore_google_play_services_message"

	const val TuIndiceStartingIndicator = "maincore_tuindice_starting_indicator"
	const val TuIndiceTopBarBackButton = "maincore_tuindice_top_bar_back_button"
	const val TuIndiceBottomBar = "maincore_tuindice_bottom_bar"
	const val TuIndiceBottomBarSummaryItem = "maincore_tuindice_bottom_bar_summary_item"
	const val TuIndiceBottomBarRecordItem = "maincore_tuindice_bottom_bar_record_item"
	const val TuIndiceBottomBarPensumItem = "maincore_tuindice_bottom_bar_pensum_item"
	const val TuIndiceBottomBarEvaluationsItem = "maincore_tuindice_bottom_bar_evaluations_item"
	const val TuIndiceBottomBarAboutItem = "maincore_tuindice_bottom_bar_about_item"
	const val TuIndiceBottomBarSummaryItemSelected = "maincore_tuindice_bottom_bar_summary_item_selected"
	const val TuIndiceBottomBarRecordItemSelected = "maincore_tuindice_bottom_bar_record_item_selected"
	const val TuIndiceBottomBarPensumItemSelected = "maincore_tuindice_bottom_bar_pensum_item_selected"
	const val TuIndiceBottomBarEvaluationsItemSelected = "maincore_tuindice_bottom_bar_evaluations_item_selected"
	const val TuIndiceBottomBarAboutItemSelected = "maincore_tuindice_bottom_bar_about_item_selected"
	const val TuIndiceNavHost = "maincore_tuindice_nav_host"
	const val AppAvailabilityNoticeScreen = "maincore_app_availability_notice_screen"
	const val AppAvailabilityNoticeTitle = "maincore_app_availability_notice_title"
	const val AppAvailabilityNoticeMessage = "maincore_app_availability_notice_message"
	const val AppAvailabilityNoticeRetryButton = "maincore_app_availability_notice_retry_button"
}
