appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- runFlow: ../auth/login-success.yaml
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_about_item
- extendedWaitUntil:
    visible:
      id: about_content_container
    timeout: 20000
- tapOn:
    id: about_open_terms
- extendedWaitUntil:
    visible:
      id: maincore_browser_container
    timeout: 15000
- tapOn:
    id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: about_content_container
    timeout: 10000
- tapOn:
    id: about_open_privacy
- extendedWaitUntil:
    visible:
      id: maincore_browser_container
    timeout: 15000
- tapOn:
    id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: about_content_container
    timeout: 10000
- tapOn:
    id: about_open_support
- extendedWaitUntil:
    visible:
      id: maincore_browser_container
    timeout: 15000
- tapOn:
    id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: about_content_container
    timeout: 10000
