appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- assertVisible:
    id: auth_sign_in_idle_container
- assertVisible:
    id: auth_analytics_consent_checkbox
- tapOn:
    id: auth_analytics_consent_checkbox
- assertVisible:
    id: auth_sign_in_idle_container
- tapOn:
    id: auth_usb_id_text_field
- inputText: "1111111"
- inputText: "1"
- tapOn:
    id: auth_password_text_field
- inputText: "123456"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- extendedWaitUntil:
    visible:
      id: wizard_welcome_screen
    timeout: 30000
