appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- assertVisible:
    id: auth_usb_id_text_field
- tapOn:
    id: auth_usb_id_text_field
- inputText: "1111111"
- inputText: "1"
- tapOn:
    id: auth_password_text_field
- inputText: "login-cancel-pass"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- extendedWaitUntil:
    visible:
      id: auth_sign_in_cancel_button
    timeout: 10000
- tapOn:
    id: auth_sign_in_cancel_button
- extendedWaitUntil:
    visible:
      id: auth_sign_in_button
    timeout: 10000
- assertNotVisible:
    id: auth_sign_in_logging_in_container
- assertVisible:
    id: auth_usb_id_text_field
