appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- tapOn:
    id: auth_usb_id_text_field
- inputText: "2222222"
- inputText: "2"
- tapOn:
    id: auth_password_text_field
- inputText: "disabled-pass"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- extendedWaitUntil:
    visible:
      id: base_snackbar_container
    timeout: 15000
- assertVisible:
    id: base_snackbar_message
- assertVisible:
    id: auth_sign_in_idle_container
