appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- assertVisible:
    id: auth_password_text_field
- tapOn:
    id: auth_password_text_field
- inputText: "123"
- inputText: "456"
- tapOn:
    id: auth_sign_in_idle_container
- tapOn:
    id: auth_password_toggle
- assertVisible:
    id: auth_sign_in_idle_container
- tapOn:
    id: auth_password_toggle
- assertVisible:
    id: auth_sign_in_idle_container
