appId: com.gdavidpb.tuindice.debug
---
- assertVisible:
    id: auth_usb_id_text_field
- tapOn:
    id: auth_usb_id_text_field
- inputText: "1111111"
- inputText: "1"
- tapOn:
    id: auth_password_text_field
- inputText: "123"
- inputText: "456"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 30000
- runFlow:
    when:
      visible:
        id: coachmark_bubble
    commands:
      - tapOn:
          id: coachmark_confirm
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 40000
