appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- tapOn:
    id: auth_usb_id_text_field
- inputText: "6666666"
- inputText: "6"
- tapOn:
    id: auth_password_text_field
- inputText: "expired-pass"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 40000
- extendedWaitUntil:
    visible:
      id: auth_update_password_idle_container
    timeout: 20000
