appId: com.gdavidpb.tuindice.debug
---
- tapOn:
    id: maincore_tuindice_bottom_bar_summary_item
- extendedWaitUntil:
    visible:
      id: summary_content_container
    timeout: 15000
- tapOn:
    id: base_top_app_bar_action_sign_out
- extendedWaitUntil:
    visible:
      id: auth_sign_out_message_text
    timeout: 10000
- tapOn:
    id: base_confirmation_dialog_positive_button
- extendedWaitUntil:
    visible:
      id: auth_usb_id_text_field
    timeout: 20000
