appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- tapOn:
    id: auth_terms_and_conditions_link
- extendedWaitUntil:
    visible:
      id: maincore_browser_container
    timeout: 10000
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: auth_sign_in_idle_container
    timeout: 10000
- tapOn:
    id: auth_privacy_policy_link
- extendedWaitUntil:
    visible:
      id: maincore_browser_container
    timeout: 10000
- runFlow:
    when:
      platform: Android
    commands:
      - back
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: maincore_tuindice_top_bar_back_button
- extendedWaitUntil:
    visible:
      id: auth_sign_in_idle_container
    timeout: 10000
